# andIAmo

./: .gitignore  README.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260507_0001_extensions.py  20260507_1610_create_users_table.py  20260507_1640_create_locales_media_opening_hours.py  20260507_1651_create_user_preferences_and_consents.py  20260507_1707_add_embedding_to_user_preferences.py  20260507_1714_create_recommendation_logs.py  20260507_1724_add_is_admin_to_users.py  20260507_1744_create_friendships.py  20260507_1750_create_outings_and_outing_participants.py  20260508_0008_create_favorites.py  20260508_0009_create_outing_votes.py  20260508_0105_add_phone_website_to_locales.py  20260508_0108_create_outing_messages.py
backend/app/: main.py
backend/app/ai/: categorizer.py  claude_client.py  embeddings.py  llm_client.py  user_profile.py
backend/app/ai/prompts/: locale_descriptor.md
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  admin.py  auth.py  concierge.py  favorites.py  friends.py  health.py  locales.py  outings.py  recommendations.py  routing.py  users.py  weather.py
backend/app/cli/: embed_locales.py  embed_users.py  seed.py  set_admin.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  favorite.py  friendship.py  locale.py  outing.py  outing_message.py  outing_vote.py  preferences.py  recommendation_log.py  user.py
backend/app/recommender/: engine.py
backend/app/schemas/: concierge.py  friendship.py  locale.py  message.py  outing.py  preferences.py  recommendation.py  user.py  vote.py
backend/app/services/: auth.py  concierge.py  favorites.py  friends.py  gdpr.py  locales.py  mediation.py  messages.py  opening_hours.py  outings.py  preferences.py  recommendations.py  routing.py  storage.py  votes.py  weather.py
backend/app/services/prompts/: concierge_system.md
backend/tests/: conftest.py  test_health.py
docs/: API.md  ARCHITECTURE.md  (+1 more)
(+66 files in other folders)
