[project]
name = "andiamo-backend"
version = "0.1.0"
description = "andIAmo backend — FastAPI + Postgres/PostGIS/pgvector + Claude AI"
requires-python = ">=3.12,<3.13"
readme = "../README.md"
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "geoalchemy2>=0.16.0",
    "pgvector>=0.3.6",
    "alembic>=1.14.0",
    "argon2-cffi>=23.1.0",
    "pyjwt[crypto]>=2.10.0",
    "python-multipart>=0.0.18",
    "email-validator>=2.2.0",
    "httpx>=0.28.0",
    "openai>=1.55.0",
    "redis>=5.2.0",
    "arq>=0.26.3",
    "boto3>=1.35.0",
    "structlog>=24.4.0",
    "orjson>=3.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "testcontainers[postgres]>=4.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle / pyflakes
    "I",               # isort
    "N",               # pep8-naming
    "UP",              # pyupgrade
    "B",               # flake8-bugbear
    "SIM",             # flake8-simplify
    "RUF",             # ruff-specific
    "ASYNC",           # async best practices
]
ignore = ["B008"]  # FastAPI uses Depends() in defaults

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
